Added urxvt extension 'color-themes'

--- a/.urxvt.conf
+++ b/.urxvt.conf
@@ -44,7 +44,18 @@ URxvt.cursorUnderline:      false
 URxvt.pointerBlank:         true
 
 ! Perl extensions
-URxvt.perl-ext-common:      default,matcher
+URxvt.perl-ext-common: default,matcher,color-themes
+
 URxvt.matcher.button:       1
 URxvt.urlLauncher:          firefox
+
+URxvt.color-themes.themedir:  ~/.themes/urxvt
+!URxvt.color-themes.preprocessor: /usr/bin/cpp
+URxvt.keysym.M-C-n:  perl:color-themes:next
+URxvt.keysym.M-C-p:  perl:color-themes:prev
+
+URxvt.color-themes.state-file: ~/.urxvt-theme
+URxvt.color-themes.autosave: 1
+!URxvt.keysym.M-C-l:  perl:color-themes:load-state
+!URxvt.keysym.M-C-s:  perl:color-themes:save-state
 
