Added urxvt perl extension vtwheel
I can't find the author, sorry.

This extension let you scroll with the mouse inside a pager,
without showing the content outside of the pager (so you
can only scroll inside, e.g., less or man).

--- a/.urxvt.conf
+++ b/.urxvt.conf
@@ -44,7 +44,7 @@ URxvt.cursorUnderline:      false
 URxvt.pointerBlank:         true
 
 ! Perl extensions
-URxvt.perl-ext-common: default,matcher,color-themes
+URxvt.perl-ext-common: default,matcher,color-themes,vtwheel
 
 URxvt.matcher.button:       1
 URxvt.urlLauncher:          firefox
