--- a/.tmux.conf
+++ b/.tmux.conf
@@ -46,10 +46,10 @@ setw -g window-status-activity-attr "none"
 setw -g window-status-activity-style "fg=colour27,bg=colour234,none"
 setw -g window-status-separator ""
 setw -g window-status-style "fg=colour39,bg=colour234,none"
-set -g status-left "#[fg=colour15,bg=colour27] #S #[fg=colour27,bg=colour234,nobold,nounderscore,noitalics]"
+set -g status-left "#[fg=colour15,bg=colour27] SESSION #S #[fg=colour27,bg=colour234,nobold,nounderscore,noitalics]"
 set -g status-right "#[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] %Y-%m-%d %H:%M #[fg=colour27,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour15,bg=colour27] #h "
-setw -g window-status-format "#[fg=colour39,bg=colour234] #I #[fg=colour39,bg=colour234] #W aaa "
-setw -g window-status-current-format "#[fg=colour234,bg=colour237,nobold,nounderscore,noitalics]#[fg=colour144,bg=colour237] #I #[fg=colour144,bg=colour237] #{pane_current_path} #[fg=colour144,bg=colour237] #W #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
+setw -g window-status-format "#[fg=colour39,bg=colour234] #I #[fg=colour39,bg=colour234] #W aaa "
+setw -g window-status-current-format "#[fg=colour234,bg=colour237,nobold,nounderscore,noitalics] #[fg=colour144,bg=colour237] index #I #[fg=colour144,bg=colour237] cur path #{pane_current_path} #[fg=colour144,bg=colour237] cur w #W #[fg=colour237,bg=colour234,nobold,nounderscore,noitalics]"
 
 # Other examples:
 # set -g @plugin 'github_username/plugin_name'
