Small fixes to urxvt

--- a/src/.urxvt.conf
+++ b/src/.urxvt.conf
@@ -15,18 +15,17 @@ URxvt.intensityStyles: false
 
 ! Fonts
 URxvt.allow_bold:           true
-!URxvt*font: xft:Monospace:pixelsize=14
-!URxvt*boldFont: xft:Monospace:pixelsize=14:style=bold
-!URxvt*font:  xft:Dejavu Sans Mono:size=11:antialias=true
-!URxvt*font:  xft:Dejavu Sans Mono for Powerline,Monaco for Powerline,Menlo for Powerline:pixelsize=8:antialias=true
-!URxvt*font: xft:Monospace:pixelsize=14:antialias=true
-URxvt*font:    xft:Dejavu Sans Mono for Powerline:pixelsize=14,xft:Menlo for Powerline:pixelsize=14,xft:Monaco for Powerline:pixelsize=14
 
-URxvt*boldFont:  xft:Dejavu Sans Mono:pixelsize=14:style=bold,xft:Menlo for Powerline:pixelsize=14:style=bold,xft:Monaco for Powerline:pixelsize=14:style=bold
-!URxvt*boldFont: xft:Monospace:pixelsize=14
+!URxvt*font:    xft:Dejavu Sans Mono for Powerline:size=12,xft:Menlo for Powerline:size=12,xft:Monaco for Powerline:size=12
+!URxvt*boldFont:  xft:Dejavu Sans Mono:size=14:style=bold,xft:Menlo for Powerline:size=14:style=bold,xft:Monaco for Powerline:size=14:style=bold
+
+URxvt*font:           xft:Dejavu Sans Mono for Powerline:size=11:antialias=true:hinting=true
+URxvt*boldFont:       xft:Dejavu Sans Mono for Powerline:size=11:antialias=true:bold:hinting=true
+URxvt*italicFont:     xft:Dejavu Sans Mono for Powerline:size=11:antialias=true:italic:autohint=true:hinting=true
+URxvt*bolditalicFont: xft:Dejavu Sans Mono for Powerline:size=11:antialias=true:bold:italic:autohint=true:hinting=true
 
 ! Fix font space
-URxvt*letterSpace: -1
+URxvt*letterSpace: -2
 
 ! Scrolling
 URxvt.scrollStyle:        rxvt
