--- a/src/.tmux.conf
+++ b/src/.tmux.conf
@@ -27,16 +27,15 @@ set-window-option -g window-status-current-attr bright
 set -g status-right "#(date)"
 set -g status-left "bar"
 
-setw -g mode-mouse on
+setw -g mouse on
 
 # statusbar settings - adopted from tmuxline.vim and vim-airline - Theme: murmur
 set -g status-justify "left"
-set -g status "on"
+set -g status "off"
 set -g status-left-style "none"
 set -g message-command-style "fg=colour144,bg=colour237"
 set -g status-right-style "none"
 set -g pane-active-border-style "fg=colour27"
-set -g status-utf8 "on"
 set -g status-style "bg=colour234,none"
 set -g message-style "fg=colour144,bg=colour237"
 set -g pane-border-style "fg=colour237"
