--- a/src/.config/gtk-3.0/settings.ini
+++ b/src/.config/gtk-3.0/settings.ini
@@ -14,5 +14,5 @@ gtk-enable-input-feedback-sounds=0
 gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
-gtk-xft-rgba=none
+gtk-xft-rgba=rgb
 gtk-modules=pk-gtk-module:canberra-gtk-module
